<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:navigationIcon="?homeAsUpIndicator"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                tools:targetApi="lollipop">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="26sp"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-condensed"/>

            <TextView
                    android:id="@+id/about_version_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:textAppearanceSmall"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textAlignment="center"
                    android:textIsSelectable="true"
                    tools:text="0.x"/>

            <TextView
                    android:id="@+id/about_app_info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                    style="@style/HeadlineTextStyle"
                    android:text="@string/about_libraries_title"/>

            <TextView
                    android:id="@+id/about_libraries_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                    style="@style/HeadlineTextStyle"
                    android:text="@string/about_license_title"/>

            <TextView
                    android:id="@+id/about_license_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                    style="@style/HeadlineTextStyle"
                    android:text="@string/about_credits_title"/>

            <TextView
                    android:id="@+id/about_credits_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_credits"/>
        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>