<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:navigationIcon="?homeAsUpIndicator"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin">

                <ImageView
                        android:id="@+id/person_details.photo"
                        android:layout_width="90dp"
                        android:layout_height="130dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:scaleType="centerInside"
                        tools:src="@drawable/background_reel"/>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/person_details.photo"
                        android:layout_toEndOf="@id/person_details.photo"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/person_details.name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/textColorDark"
                            tools:text="Stanley Kubrick"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_horizontal_padding"
                            android:textColor="@color/textColorDark"
                            android:textStyle="bold"
                            android:text="@string/details_born_title"/>

                    <TextView
                            android:id="@+id/person_details.birthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_horizontal_padding"
                            tools:text="July 26, 1928"/>

                    <TextView
                            android:id="@+id/person_details.place_of_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_horizontal_padding"
                            tools:text="Manhattan, New York, US"/>

                    <LinearLayout
                            android:id="@+id/person_details.death_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="gone">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/activity_horizontal_padding"
                                android:textColor="@color/textColorDark"
                                android:textStyle="bold"
                                android:text="@string/details_died_title"/>

                        <TextView
                                android:id="@+id/person_details.deathday"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/activity_horizontal_padding"
                                tools:text="March 7, 1999"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"/>

            <org.asdtm.inmovie.view.ExpandableTextView
                    android:id="@+id/person_details.biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    android:textIsSelectable="true"
                    android:textColor="@color/textColorDark"
                    tools:text="Stanley Kubrick (July 26, 1928 – March 7, 1999) was an American..."/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:padding="@dimen/activity_vertical_margin">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:text="@string/details_imdb_page_title"
                        android:textStyle="bold"
                        android:textColor="@color/textColorDark"/>

                <TextView
                        android:id="@+id/person_details.imdb_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:textColorLink="@color/colorLink"
                        tools:text="http://www.imdb.com/name/nm0000040/"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:text="@string/detail_homepage_title"
                        android:textStyle="bold"
                        android:textColor="@color/textColorDark"/>

                <TextView
                        android:id="@+id/person_details.homepage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:textColorLink="@color/colorLink"
                        tools:text=""/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_marginBottom="-6dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            style="@style/InMovieSPB"/>

</android.support.design.widget.CoordinatorLayout>